--- a/style.css
+++ b/style.css
@@ -19,9 +19,12 @@
 }
 
 body {
+  height: 100vh;
   background-color: #3F454D;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
 ul, li {
@@ -68,13 +71,13 @@ img {
 }
 
 #wrap {
-  max-width: 700px;
-  height: 100vh;
-  margin: 8px auto 8px;
+  /* max-width: 700px; */
+  /* margin: 8px auto 8px; */
+  margin: 8px;
 }
 
 #main {
-  /* overflow: scroll; */
+  overflow-y: scroll;
 }
 
 
@@ -147,6 +150,8 @@ nav .btn-group li:last-child .btn {
 /* MAIN */
 #main {
   width: 100%;
+  /* width: 60%; */
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -177,6 +182,7 @@ nav .btn-group li:last-child .btn {
   font-size: 18px;
   padding: 8px;
   border-radius: 8px;
+  width: 99%;
 }
 
 #main .type ul li img ,
@@ -188,4 +194,27 @@ nav .btn-group li:last-child .btn {
 
 #main ul.clothes.invisible {
   display: none;
+}
+
+
+/* 미디어쿼리 */
+@media screen and (max-width: 768px) {
+  body {
+    /* display: block; */
+    /* height: auto; */
+  }
+
+  #wrap {
+    /* max-width: 700px; */
+    /* margin: 0 auto; */
+  }
+
+  nav {
+    flex-direction: column;
+  }
+
+  nav .icon-group .icon {
+    width: 80px;
+    margin-bottom: 8px;
+  }
 }
